--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Ururimi rw'ikinyarwanda</title>
+  <title>Coming soon</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="css/coming-soon.css" rel="stylesheet">
@@ -18,7 +18,7 @@
   <header class="wrap-bg d-flex">
     <div class="container text-center my-auto">
       <h1 class="mb-5">
-				<img src="https://res.cloudinary.com/ninjas/image/upload/v1576224452/IKINYARWANDA_V_L_s5rqfj.svg" alt="logo" style='max-width: 400px;'>
+				<img src="./img/NISISI_LOGO_WEB.svg" alt="logo" style='max-width: 320px;'>
 			</h1>
       <h2>
         Coming soon!
